# src/web/index.js
@@ -1,43 +1,13 @@
-/*import express from "express";
-import categories from "./categoryRoutes.js";
-import orders from "./orderRoutes.js";
-import products from "./productRoutes.js";
-import status from "./statusRoutes.js";
-import customers from "./customerRoutes.js"*/
-
 import swaggerUI from 'swagger-ui-express';
 import swaggerFile from '../../swagger-output.json' assert { type: "json" };
 import customerRoutes from "./customerRoutes.js";
 import categoryRoutes from './categoryRoutes.js';
 import productRoutes from './productRoutes.js';
 import orderRoutes from './orderRoutes.js';
-//import customerController from "../controllers/customerController.js";
-//import customerRepository from "../application/repositories/customerDbRepository.js";
-//import customerRepository from "../../src/application/repositories/customerDBRepository.js";
-//import customerRepositoryMongoDB from "../frameworks/database/mongoDB/repositories/customerRepositoryMongoDB.js";
+import paymentRoutes from './paymentRoutes.js';
+import statusRoutes from './statusRoutes.js';
 
 import bodyParser from "body-parser";
-
-/*const routes = (app) => {
-	console.log('routes');
-  app.route("/").get((req, res) => res.status(200).send("Sistema de pedidos"));
-
-  // app.use('/docs', swaggerUI.serve, swaggerUI.setup(swaggerFile));
-	const controller = customerController(customerRepository, customerRepositoryMongoDB);
-
- 
-
-  app.use('/customer', bodyParser.json(), controller.addNewCustomer)
-  app.use('/customer', bodyParser.json(), controller.fetchAllCustomer)
-
-  //app.use('/customer', customerRoutes(express));
-  // app.use(express.json(), categories, customers, orders, products, status);
-};
-
-export default routes;*/
-
-// routes/user.js
-
 
 export default function routes(app, express){
   
@@ -50,7 +20,9 @@ export default function routes(app, express){
   app.use('/customer', customerRoutes(express));
   app.use('/category', categoryRoutes(express));
   app.use('/product', productRoutes(express));
+  app.use('/status', statusRoutes(express));
   app.use('/order', orderRoutes(express));
+  app.use('/payment', paymentRoutes(express));
 
   //app.route("/").get((req, res) => res.status(200).send("Sistema de pedidos"));
 
